--- a/src/style/CustomStyle.css
+++ b/src/style/CustomStyle.css
@@ -19,9 +19,6 @@ a:hover {
 }
 
 .zoom:hover {
-  transform: scale(
-    1.01
-  ); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
-
-  transition: 0.3s;
+  transform: scale(1.01);
+  transition: 100ms;
 }
