--- a/src/style/CustomStyle.css
+++ b/src/style/CustomStyle.css
@@ -5,6 +5,13 @@
   padding: 0;
   font-family: "Figtree", sans-serif;
 }
+a {
+  color: inherit;
+  text-decoration: none;
+}
+.nav-link {
+  color: #2800bb;
+}
 
 .card-custom {
   height: 100%;
